# VMBusPipe

./: .gitignore  CMakeLists.txt  README.md  VmBusPipe.sln
Logs/: VmBusPipeStub00EC.txt  VmBusPipeStub0124.txt  VmBusPipeStub0130.txt  VmBusPipeStub031C.txt  VmBusPipeStub0328.txt  VmBusPipeStub0524.txt  VmBusPipeStub052C.txt  VmBusPipeStub0594.txt
VmBusPipe/: CMakeLists.txt  Main.c  VmBusPipe.c  VmBusPipe.h  VmBusPipe.vcxproj  VmBusPipeGuest.c  VmBusPipeHost.c
VmBusPipeStub/: CMakeLists.txt  Helpers.cpp  Helpers.h  VmBusPipeStub.cpp  VmBusPipeStub.def  VmBusPipeStub.h  VmBusPipeStub.vcxproj  vmbuspipe.def  vmbuspiper.def
VmBusPipeTest/: CMakeLists.txt  Main.c  VmBusPipeTest.vcxproj
